Fix login and signup sceens spacing on mobile

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -88,3 +88,23 @@
     }
   }
 }
+
+@media (max-width: 1000px) {
+  .container {
+    .login-card {
+      position: fixed;
+      top:0;
+      right: 0px;
+      min-width: 100%;
+      min-height: 100%;
+      padding: 0px 20px 0px 20px;
+
+      .fields {
+        p {
+          margin-top: 20%;
+        }
+      }
+    }
+
+    }
+  }
